<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nameListDish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textTitleCell"
            android:textSize="@dimen/fontTitleSize"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageListDish"
                android:layout_width="@dimen/imageDishListSize"
                android:layout_height="@dimen/imageDishListSize"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/textImageCell"
                android:cropToPadding="false"
                android:maxHeight="@dimen/imageDishListSize"
                android:maxWidth="@dimen/imageDishListSize"
                android:minHeight="@dimen/imageDishListSize"
                android:minWidth="@dimen/imageDishListSize"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/pollo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/alergen1"
                        android:layout_width="@dimen/maxWidthAlergen"
                        android:layout_height="@dimen/maxHeightAlergen"
                        android:contentDescription="@string/textImageCell"
                        app:srcCompat="@drawable/alergenoaltramuces" />

                    <ImageView
                        android:id="@+id/alergen2"
                        android:layout_width="@dimen/maxWidthAlergen"
                        android:layout_height="@dimen/maxHeightAlergen"
                        android:contentDescription="@string/textImageCell"
                        app:srcCompat="@drawable/alergenoaltramuces" />

                    <ImageView
                        android:id="@+id/alergen3"
                        android:layout_width="@dimen/maxWidthAlergen"
                        android:layout_height="@dimen/maxHeightAlergen"
                        android:contentDescription="@string/textImageCell"
                        app:srcCompat="@drawable/alergenoaltramuces" />

                    <ImageView
                        android:id="@+id/alergen4"
                        android:layout_width="@dimen/maxWidthAlergen"
                        android:layout_height="@dimen/maxHeightAlergen"
                        android:contentDescription="@string/textImageCell"
                        app:srcCompat="@drawable/alergenoaltramuces" />

                    <ImageView
                        android:id="@+id/alergen5"
                        android:layout_width="@dimen/maxWidthAlergen"
                        android:layout_height="@dimen/maxHeightAlergen"
                        android:contentDescription="@string/textImageCell"
                        app:srcCompat="@drawable/alergenoaltramuces" />

                    <ImageView
                        android:id="@+id/alergen6"
                        android:layout_width="@dimen/maxWidthAlergen"
                        android:layout_height="@dimen/maxHeightAlergen"
                        android:contentDescription="@string/textImageCell"
                        app:srcCompat="@drawable/alergenoaltramuces" />

                    <ImageView
                        android:id="@+id/alergen7"
                        android:layout_width="@dimen/maxWidthAlergen"
                        android:layout_height="@dimen/maxHeightAlergen"
                        android:contentDescription="@string/textImageCell"
                        app:srcCompat="@drawable/alergenoaltramuces" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/alergen8"
                        android:layout_width="@dimen/maxWidthAlergen"
                        android:layout_height="@dimen/maxHeightAlergen"
                        android:contentDescription="@string/textImageCell"
                        app:srcCompat="@drawable/alergenoaltramuces" />

                    <ImageView
                        android:id="@+id/alergen9"
                        android:layout_width="@dimen/maxWidthAlergen"
                        android:layout_height="@dimen/maxHeightAlergen"
                        android:contentDescription="@string/textImageCell"
                        app:srcCompat="@drawable/alergenoaltramuces" />

                    <ImageView
                        android:id="@+id/alergen10"
                        android:layout_width="@dimen/maxWidthAlergen"
                        android:layout_height="@dimen/maxHeightAlergen"
                        android:contentDescription="@string/textImageCell"
                        app:srcCompat="@drawable/alergenoaltramuces" />

                    <ImageView
                        android:id="@+id/alergen11"
                        android:layout_width="@dimen/maxWidthAlergen"
                        android:layout_height="@dimen/maxHeightAlergen"
                        android:contentDescription="@string/textImageCell"
                        app:srcCompat="@drawable/alergenoaltramuces" />

                    <ImageView
                        android:id="@+id/alergen12"
                        android:layout_width="@dimen/maxWidthAlergen"
                        android:layout_height="@dimen/maxHeightAlergen"
                        android:contentDescription="@string/textImageCell"
                        app:srcCompat="@drawable/alergenoaltramuces" />

                    <ImageView
                        android:id="@+id/alergen13"
                        android:layout_width="@dimen/maxWidthAlergen"
                        android:layout_height="@dimen/maxHeightAlergen"
                        android:contentDescription="@string/textImageCell"
                        app:srcCompat="@drawable/alergenoaltramuces" />

                    <ImageView
                        android:id="@+id/alergen14"
                        android:layout_width="@dimen/maxWidthAlergen"
                        android:layout_height="@dimen/maxHeightAlergen"
                        android:contentDescription="@string/textImageCell"
                        app:srcCompat="@drawable/alergenoaltramuces" />
                </LinearLayout>

                <TextView
                    android:id="@+id/priceListDish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom|end"
                    android:text="@string/textPriceCell"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/fontTitleSize"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>